Changes in version 4.1.6
----------------------

- Update `featureArea` function to consider all chromatographic peaks per
  feature, not only the one with the highest intensity. As a consequence,
  returned m/z and rt ranges might be higher which has an influence in
  `featureChromatograms`, EIC-based feature grouping and, to a lesser extent
  also in gap-filling. Related documentation was updated.
- Improve performance of the `featureArea` function (and related of the
  `PeakAreaParam`-based gap filling).
- Add parameter `ppm` to `PeakDensityParam` to enable peak-density-based
  correspondence throgh m/z-dependent bins along the m/z.

Changes in version 4.1.5
----------------------

- Improve performance of the `chromatogram` call for `XcmsExperiment` objects.
- Remove internal (not exported) normalization functions. These have been
  transferred to the MetaboCoreUtils package.
- Support subsetting of `XcmsExperiment` with negative indices.

Changes in version 4.1.4
----------------------

- Rename variable `data` in the vignette to `faahko`.
- Fix issue in adjustRtime resulting in corrupt processHistory.
- Add support to perform peakGroups alignment using pre-defined anchor peak
  matrix (i.e., the numeric matrix with retention times of anchor peaks in
  the samples that can be used to align these samples).
- Fix errors related to invalid `Chromatogram` objects extracted from xcms
  results: ensure MS level in `chromPeaksMatrix` is `integer`.
- Fix definition of anchor peaks for peakGroups alignment with subset
  (issue #702).
- Add `filterMsLevel` method for `MsExperiment` and `XcmsExperiment`.
- Ensure chunk-wise processing of Spectra (introduced with version 1.13.2) is
  disabled when xcms is using its own chunk-wise processing.

Changes in version 4.1.3
----------------------

- Add parameter `verboseBetaColumns` to `CentWaveParam` to enable calculation
  of additional peak quality metrics comparing the EIC to an idealized bell
  curve.
