@@ -56,9 +56,9 @@ Imports:
     robustbase,
     IRanges,
     SummarizedExperiment,
-    MsCoreUtils (>= 1.11.5),
+    MsCoreUtils (>= 1.15.3),
     MsFeatures,
-    MsExperiment (>= 1.1.2),
+    MsExperiment (>= 1.5.3),
     Spectra (>= 1.13.2),
     progress,
     multtest,
@@ -87,7 +87,7 @@ URL: https://github.com/sneumann/xcms
 BugReports: https://github.com/sneumann/xcms/issues/new
 VignetteBuilder: knitr
 biocViews: ImmunoOncology, MassSpectrometry, Metabolomics
-RoxygenNote: 7.3.0
+RoxygenNote: 7.3.1
 Collate:
     'AllGenerics.R'
     'functions-XChromatograms.R'
