@@ -394,10 +394,10 @@ detection in purely chromatographic data.
     the peak detection.
 
 Other peak detection methods: 
+\code{\link{findChromPeaks}()},
 \code{\link{findChromPeaks-centWaveWithPredIsoROIs}},
 \code{\link{findChromPeaks-massifquant}},
 \code{\link{findChromPeaks-matchedFilter}},
-\code{\link{findChromPeaks}()},
 \code{\link{findPeaks-MSW}}
 }
 \author{
